--- a/Auxiliary Files/Pragya/login in.html
+++ b/Auxiliary Files/Pragya/login in.html
@@ -8,8 +8,8 @@
 <h1>LogIn</h1>
 <P></p>
 <form action="URL" onsubmit="return validateSubmit()" method="POST">
-<input type="text" placeholder="Username" name="Username_id" required><br><br>
-<input type="password" placeholder="password" name="password_id" required><br><br>
+<input type="text" placeholder="Username" name="Username" required><br><br>
+<input type="password" placeholder="password" name="password" required><br><br>
 <button type="submit">LogIn</button>
 </center>
 <form >
